classDiagram
direction TB

class Owner {
    +pets: List~Pet~
    +get_all_tasks() List~Task~
    +iter_tasks_with_pet()
    +filter_tasks(status, pet_name)
}

class Pet {
    +name: str
    +species: str
    +age: int
    +tasks: List~Task~
    +getRecommendedFrequence() str
    +getHealthConstraints() List~str~
}

class Task {
    +description: str
    +time_minutes: Optional~int~
    +frequency: str
    +completed: bool
    +duration_minutes: int
    +priority: int
    +weekly_weekday: Optional~int~
    +due_date: Optional~date~
    +total_block_minutes() int
    +applies_for_weekday(weekday) bool
    +giveUrgencyScore() float
    +getRequiredTimeBuffer() int
    +is_due_on(reference) bool
    +mark_complete(pet, today) void
}

class Scheduler {
    +owner: Owner
    +constraintsList: List
    +preferred_time_conflict_warnings() List~str~
    +plan_conflict_warnings(plan) List~str~
    +sortTasksByPriority(weekday, reference_date)
    +findAvailableSlot(...) Optional~int~
    +generateOptimizedSchedule(...) plan
}

class TimeRangeConflict {
    <<dataclass>>
    +pet_a, task_a, start_a, end_a
    +pet_b, task_b, start_b, end_b
}

class PawPalModule {
    <<module helpers>>
    +filter_tasks_with_pets()
    +sort_pairs_by_preferred_time()
    +sort_pairs_by_urgency()
    +detect_preferred_time_conflicts()
    +format_time_range_conflict_warning()
    +detect_plan_conflicts()
}

Owner "1" o-- "0..*" Pet : aggregates
Pet "1" o-- "0..*" Task : tasks
Scheduler "1" *-- "1" Owner : schedules for
Scheduler ..> Task : reads via owner
Scheduler ..> Pet : reads via owner
PawPalModule ..> Owner : uses
PawPalModule ..> Pet : uses
PawPalModule ..> Task : uses
PawPalModule ..> TimeRangeConflict : builds
Task ..> Pet : mark_complete()
